--- a/template/Webcam.html
+++ b/template/Webcam.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <form action="webcam" method="POST">
-        <img src="{{link}}" alt="video_feed" />
-        <button type="button" name="cam" >Start</button>
+        <img src="{{link}}" alt="video_feed" width="50%" />
     </form>
 </body>
 </html>
