--- a/template/about.html
+++ b/template/about.html
@@ -92,7 +92,7 @@ img {
     <div class="column-66">
       <h1 class="xlarge-font"><b>Guided By</b></h1>
       <h1 class="large-font" style="color:red;"><b>Dr. Vandana B.S</b></h1>
-        <p><span style="font-size:24px"> Assitant Professor,Department of Computer Science and Engineering,VCET puttur</span></p>
+        <p><span style="font-size:24px"> Assitant Professor, Department of Computer Science and Engineering, VCET Puttur.</span></p>
     </div>
   </div>
 </div>
@@ -103,9 +103,9 @@ img {
     <div class="column-66">
       <h1 class="xlarge-font"><b>Team Members</b></h1>
       <h1 class="large-font" style="color:MediumSeaGreen;"><b><ol><li>Vaishnavi  4VP17CS084</li>
-      <li>Rachana 4VP17CS048</li>
+      <li>Rachana S.N 4VP17CS048</li>
       <li>Theertha A.V  4VP17CS082</li>
-      <li>Tejaswini Shreedhara Gouda  4VP17CS080</li></ol></b></h1>
+      <li>Tejaswini Shreedhar Gouda  4VP17CS080</li></ol></b></h1>
       <p><span style="font-size:36px">Take photos like a pro.</span> Smile Please</p>
     </div>
 
