--- a/template/contact.html
+++ b/template/contact.html
@@ -121,38 +121,28 @@ body {
   </div>
   <div class="row">
     <div class="column">
-      <img src="https://www.w3schools.com/w3images/map.jpg" style="width:100%">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.960157328055!2d75.1822885146431!3d12.781098190981073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba4bd112e521305%3A0xc08171b778a56885!2sVivekananda%20College%20of%20Engineering%20%26%20Technology%2C%20Puttur!5e0!3m2!1sen!2sin!4v1623997623630!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-    <div class="column">
-      <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="country">Country</label>
-        <select id="country" name="country">
-          <option value="australia">India</option>
-          <option value="canada">Canada</option>
-          <option value="usa">USA</option>
-        </select>
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-        <input type="submit" value="Submit">
-      </form>
+        <div class="column">
+      <h1>Contact us</h1>
+      <address>
+         Vivekananda Campus,<br>
+          Nehru Nagar,<br> Puttur, Karnataka - 574203<br>
+      </address>
+        <p>Phone No:082512 35955</p>
     </div>
-  </div>
-</div>
-
-
-<div class="flip-card">
+      <div class="column">
+          <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-back">
       <h1>Team VCET</h1>
-      <p>CEO & Founder of This APP</p>
+      <p>CEO & Founder of This Web Application</p>
       <p>#Take The Lead</p>
     </div>
   </div>
 </div>
-
+      </div>
+  </div>
+</div>
 </body>
 </html>
