--- a/Face_recognition flask/template/contact.html
+++ b/Face_recognition flask/template/contact.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <style>
 body {
@@ -47,7 +50,6 @@ input[type=submit]:hover {
   float: left;
   width: 50%;
   margin-top: 6px;
-    padding-left: 3px;
   padding: 20px;
 }
 
@@ -120,20 +122,18 @@ body {
   </div>
   <div class="row">
     <div class="column">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.960157328055!2d75.1822885146431!3d12.781098190981073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba4bd112e521305%3A0xc08171b778a56885!2sVivekananda%20College%20of%20Engineering%20%26%20Technology%2C%20Puttur!5e0!3m2!1sen!2sin!4v1623997623630!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.960157328055!2d75.1822885146431!3d12.781098190981073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba4bd112e521305%3A0xc08171b778a56885!2sVivekananda%20College%20of%20Engineering%20%26%20Technology%2C%20Puttur!5e0!3m2!1sen!2sin!4v1623997623630!5m2!1sen!2sin" width="550" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
         <div class="column">
-            <hr>
       <h1>Address</h1>
       <address>
-          <span class="glyphicon glyphicon-map-marker"></span>
+          <a href="#"><i class="fa fa-map"></i>
          Vivekananda Campus,<br>
-          Nehru Nagar,<br> Puttur, Karnataka - 574203<br>
-      </address>
-            <span class="glyphicon glyphicon-phone">
-        <p>Phone No:082512 35955</p>
-            <span class="glyphicon glyphicon-envelope">
-         <p>Email:vcetputtur@gmail.com</p>
+          Nehru Nagar,<br> Puttur, Karnataka - 574203
+          </a><br>
+      </address><br>
+        <a href="#"><i class="fa fa-phone"></i> Phone No:082512 35955</a><br>
+         <a href="#"><i class="fa fa-envelope"></i>vcetputtur@gmail.com</a>
     </div>
       <div class="column">
           <div class="flip-card">
