--- a/Face_recognition flask/template/contact.html
+++ b/Face_recognition flask/template/contact.html
@@ -43,6 +43,7 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 10px;
+    height:900px;
 }
 
 /* Create two columns that float next to eachother */
@@ -126,15 +127,12 @@ body {
     </div>
         <div class="column">
       <h1>Address</h1>
-      <address>
           <a href="#"><i class="fa fa-map"></i>
          Vivekananda Campus,<br>
           Nehru Nagar,<br> Puttur, Karnataka - 574203
           </a><br>
-      </address><br>
-        <a href="#"><i class="fa fa-phone"></i> Phone No:082512 35955</a><br>
+        <a href="#"><i class="fa fa-phone"></i> Phone No:082512 35955</a>
          <a href="#"><i class="fa fa-envelope"></i>vcetputtur@gmail.com</a>
-    </div>
       <div class="column">
           <div class="flip-card">
   <div class="flip-card-inner">
@@ -146,7 +144,9 @@ body {
   </div>
 </div>
       </div>
-  </div>
+      </div>
+      </div>
+
 </div>
 </body>
 </html>
